Shenandoah needs to acquire lock before CLDG::clear_claimed_marks

XMLWordPrintable

    • gc
    • b20

        Fails on new assert from JDK-8223391. This is legit GC bug that is captured by the assert.

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/mutexLocker.cpp:192
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/runtime/mutexLocker.cpp:192), pid=14984, tid=14990
        # fatal error: must own lock ClassLoaderDataGraph_lock
        #
        # JRE version: OpenJDK Runtime Environment (13.0) (fastdebug build 13-internal+0-adhoc.shade.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 13-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x136ca86] assert_locked_or_safepoint_weak(Monitor const*)+0x76
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/shade/trunks/jdk-jdk/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_tier1_gc_shenandoah/scratch/6/core.14984)
        #

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: