8223570: Shenandoah needs to acquire lock before CLDG::clear_claimed_marks

Reviewed-by: rkennke, tschatzl